--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 								<li><a href="#" class="fa-twitter">Twitter</a></li>
 								<li><a href="#" class="fa-instagram">Instagram</a></li>
 								<li><a href="#" class="fa-facebook">Facebook</a></li>
+								<li><a href="hyperspace/" class="fa-cube">Work</a></li>
+
 							</ul>
 						</footer>
 					</section>
