profile  code update

--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
 				<!-- Main -->
 					<section id="main">
 						<header>
-							<span class="avatar"><img src="images/0.jpg" alt="" /></span>
+							<!-- <span class="avatar"><img src="images/0.jpg" alt="" /></span>
 							<h1>Kushal Shit</h1>
-							<p>Software Engineer</p>
+							<p>Software Engineer</p> -->
 						</header>
 						<footer>
 							<ul class="icons">
 								<li><a href="#" class="fa-twitter">Twitter</a></li>
 								<li><a href="#" class="fa-instagram">Instagram</a></li>
 								<li><a href="#" class="fa-facebook">Facebook</a></li>
-								<li><a href="hyperspace/" class="fa-cube">Work</a></li>
+								<li><a href="profile/" class="fa-cube">Work</a></li>
 
 							</ul>
 						</footer>
