--- a/profile/document/d1.html
+++ b/profile/document/d1.html
@@ -1,9 +1,9 @@
 
 <section>
-    <a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
+    <a href="#" class="image"><img src="images/1.png" alt="" data-position="center center" /></a>
     <div class="content">
         <div class="inner">
-            <h2>Sed ipsum dolor</h2>
+            <h2>Blockchain</h2>
             <p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
             <ul class="actions">
                 <li><a href="generic.html" class="button">Learn more</a></li>
@@ -12,10 +12,10 @@
     </div>
 </section>
 <section>
-    <a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
+    <a href="#" class="image"><img src="images/2.png" alt="" data-position="top center" /></a>
     <div class="content">
         <div class="inner">
-            <h2>Feugiat consequat</h2>
+            <h2>Node JS</h2>
             <p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
             <ul class="actions">
                 <li><a href="generic.html" class="button">Learn more</a></li>
@@ -24,10 +24,10 @@
     </div>
 </section>
 <section>
-    <a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
+    <a href="#" class="image"><img src="images/3.png" alt="" data-position="25% 25%" /></a>
     <div class="content">
         <div class="inner">
-            <h2>Ultricies aliquam</h2>
+            <h2>MEAN Stack</h2>
             <p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
             <ul class="actions">
                 <li><a href="generic.html" class="button">Learn more</a></li>
