--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 				<!-- Main -->
 					<section id="main">
 						<header>
-							<!-- <span class="avatar"><img src="images/0.jpg" alt="" /></span>
+							<span class="avatar"><img src="images/0.jpg" alt="" /></span>
 							<h1>Kushal Shit</h1>
-							<p>Software Engineer</p> -->
+							<p>Software Engineer</p>
 						</header>
 						<footer>
 							<ul class="icons">
