--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
 							<p>Software Engineer</p>
 						</header>
 						<footer>
+								
 							<ul class="icons">
-								<li><a href="#" class="fa-twitter">Twitter</a></li>
-								<li><a href="#" class="fa-instagram">Instagram</a></li>
-								<li><a href="#" class="fa-facebook">Facebook</a></li>
-								<li><a href="profile/" class="fa-cube">Work</a></li>
-
+								<!-- <li><a href="#" class="fa-twitter">Twitter</a></li>
+								<li><a href="#" class="fa-instagram">Instagram</a></li> -->
+								<li><a href="https://github.com/kushalshit27" class="fa-github">Github</a></li>
+								<li><a href="profile/" class="fa-id-badge">Work</a></li>								
 							</ul>
 						</footer>
 					</section>
