--- a/profile/index.html
+++ b/profile/index.html
@@ -15,8 +15,8 @@
 					<nav>
 						<ul>
 							<li><a href="#intro">Welcome</a></li>
-							<li><a href="#one">Who am I</a></li>
-							<li><a href="#two">What I do</a></li>
+							<li><a href="#one">What I do</a></li>
+							<li><a href="#two">Technologies</a></li>
 							<li><a href="#three">Get in touch</a></li>
 						</ul>
 					</nav>
@@ -29,8 +29,11 @@
 				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
-							<h1>Hyperspace</h1>
-							<p>Just another fine responsive site template designed by.</p>
+							<h1>Hello World, I am Kushal</h1>
+							<p>Developing for development.<br>
+								<code>whoami</code>~Web Developer. Skilled in Express.js, Node.js, Angular js, Laravel, Lumen, MongoDB and WebREST Services API.
+								Experience in developing the decentralized Blockchain application.
+							</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Learn more</a></li>
 							</ul>
@@ -70,7 +73,7 @@
 				   
 				   $('#one').load("document/d1.html");
 				   $('#two').load("document/d2.html");
-				   $('#three').load("document/d2.html");
+				   $('#three').load("document/d3.html");
 
 				});
 			</script>	
