--- a/profile/document/d1.html
+++ b/profile/document/d1.html
@@ -4,9 +4,12 @@
     <div class="content">
         <div class="inner">
             <h2>Blockchain</h2>
-            <p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+            <p>
+                Blockchain,is chain of blocks,a growing list of records, which are linked using cryptographic hash.Each block contains a cryptographic hash of the previous block,a timestamp, and transaction data (generally represented as a Merkle tree).
+                <i>Ethereum is a decentralized platform that runs smart contracts.</i>
+            </p>
             <ul class="actions">
-                <li><a href="generic.html" class="button">Learn more</a></li>
+                <li><a href="https://en.wikipedia.org/wiki/Ethereum" class="button">Learn more</a></li>
             </ul>
         </div>
     </div>
@@ -16,9 +19,9 @@
     <div class="content">
         <div class="inner">
             <h2>Node JS</h2>
-            <p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+            <p>Node JS, the power of Javascript unleashed.Asynchronous and event Driven,super fast, No buffering, Single threaded but highly scalable. </p>
             <ul class="actions">
-                <li><a href="generic.html" class="button">Learn more</a></li>
+                <li><a href="https://en.wikipedia.org/wiki/Node.js" class="button">Learn more</a></li>
             </ul>
         </div>
     </div>
@@ -28,9 +31,9 @@
     <div class="content">
         <div class="inner">
             <h2>MEAN Stack</h2>
-            <p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+            <p>The MEAN stack is MongoDB, Express.js, AngularJS, and Node.js. A Full stack solution for web application.</p>
             <ul class="actions">
-                <li><a href="generic.html" class="button">Learn more</a></li>
+                <li><a href="https://en.wikipedia.org/wiki/MEAN_(software_bundle)" class="button">Learn more</a></li>
             </ul>
         </div>
     </div>
