--- a/profile/document/d2.html
+++ b/profile/document/d2.html
@@ -1,39 +1,64 @@
 <div class="inner">
     <h2>What we do</h2>
-    <p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
+    <p> Learning is always a key factor for to me.
+        Developing new thing with new tools is exciting. 
+        Apart from this like to Paint,Play Football.
+        Some of my project are linked below: 
+    </p>
     <div class="features">
         <section>
             <span class="icon major fa-code"></span>
-            <h3>Lorem ipsum amet</h3>
-            <p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+            <h3>BlockChain-explorer</h3>
+            <p>BlockChain explorer is now based on Ethereum based web application.</p>
+            <ul class="actions stacked">
+                <li><a href="https://github.com/kushalshit27/BlockChain-explorer" class="button small">Code base</a></li>
+            </ul>
+        </section>
+
+        <section>
+            <span class="icon major fa-code"></span>
+            <h3>Node stream </h3>
+            <p>Node JS base streaming app for big files.</p>
+            <ul class="actions stacked">
+                <li><a href="https://github.com/kushalshit27/node-stream" class="button small">Code base</a></li>
+            </ul>
+        </section>
+
+        <section>
+            <span class="icon major fa-code"></span>
+            <h3>Rest API with Go</h3>
+            <p>Rest API with Go.</p>
+            <ul class="actions stacked">
+                <li><a href="https://github.com/kushalshit27/go-rest-api" class="button small">Code base</a></li>
+            </ul>
         </section>
         <section>
-            <span class="icon major fa-lock"></span>
-            <h3>Aliquam sed nullam</h3>
-            <p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-        </section>
-        <section>
-            <span class="icon major fa-cog"></span>
-            <h3>Sed erat ullam corper</h3>
-            <p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-        </section>
-        <section>
-            <span class="icon major fa-desktop"></span>
-            <h3>Veroeros quis lorem</h3>
-            <p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+            <span class="icon major fa-code"></span>
+            <h3>Django-rest-api</h3>
+            <p>API with Django REST.</p>
+            <ul class="actions stacked">
+                <li><a href="https://github.com/kushalshit27/django-rest-api" class="button small">Code base</a></li>
+            </ul>
         </section>
         <section>
             <span class="icon major fa-chain"></span>
-            <h3>Urna quis bibendum</h3>
-            <p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+            <h3>Node-websocket</h3>
+            <p>Node websocket app.</p>
+            <ul class="actions stacked">
+                <li><a href="https://github.com/kushalshit27/Node-websocket" class="button small">Code base</a></li>
+            </ul>
         </section>
         <section>
             <span class="icon major fa-diamond"></span>
-            <h3>Aliquam urna dapibus</h3>
-            <p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+            <h3>Node-chat-app</h3>
+            <p>Chat App with Socket.io.</p>
+            <ul class="actions stacked">
+                <li><a href="https://github.com/kushalshit27/node-chat-app" class="button small">Code base</a></li>
+            </ul>
         </section>
+
     </div>
     <ul class="actions">
-        <li><a href="generic.html" class="button">Learn more</a></li>
+        <li><a href="https://github.com/kushalshit27" class="button">Learn more</a></li>
     </ul>
 </div>
