--- a/profile/index.html
+++ b/profile/index.html
@@ -30,8 +30,12 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1>Hello World, I am Kushal</h1>
+							<ul class="icons">
+								<li><a href="https://github.com/kushalshit27" class="fa-github"><span class="label">GitHub</span></a></li>
+								<li><a href="https://in.linkedin.com/in/kushal-shit-50a36389" class="fa-linkedin"><span class="label">LinkedIn</span></a></li>
+							</ul>
 							<p>Developing for development.<br>
-								<code>whoami</code>~Web Developer. Skilled in Express.js, Node.js, Angular js, Laravel, Lumen, MongoDB and WebREST Services API.
+								<code>whoami</code>~Web Developer. Skilled in Express.js, Node.js, Angular js, Laravel, Lumen, MongoDB and Web REST Services API.
 								Experience in developing the decentralized Blockchain application.
 							</p>
 							<ul class="actions">
