--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 						<header>
 							<span class="avatar"><img src="images/0.jpg" alt="" /></span>
 							<h1>Kushal Shit</h1>
-							<p>Software Engineer</p>
+							<p>Senior Software Engineer</p>
 						</header>
 						<footer>
 								
