--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
                 >Github</a
               >
             </li>
+            <li>
+              <a href="#" class="fa-user"
+                >Profile</a
+              >
+            </li>
           </ul>
         </footer>
       </section>
