--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <section id="main">
         <header>
           <span class="avatar"><img src="/images/0.jpg" alt="" /></span>
-          <h1>Kushal Shit</h1>
+          <h1>Kushal</h1>
           <p>Senior Software Engineer</p>
         </header>
         <footer>
